# multichainJS-test-project

rinkeby-contract/: hardhat.config.js  package-lock.json  package.json
rinkeby-contract/cache/: solidity-files-cache.json
rinkeby-contract/contracts/: Storage.sol
rinkeby-contract/scripts/: deploy.js
solana-devnet-contract/: Anchor.toml  package-lock.json
solana-devnet-contract/programs/solana-devnet-contract/: Cargo.toml
solana-devnet-contract/programs/solana-devnet-contract/src/: lib.rs
solana-devnet-contract/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-A1ABQSoML1pEzX9dekp8Jt9GRRwsp7SwbJfTcimnghEk.tar.bz2  snapshot-5701-DshfkBKyJ93BV7JRLMbjJjbk929DmvEdg5pkK8EnzBKT.tar.bz2  snapshot-5801-69FyDu38umsM3QiTd4vGFWQ3HKoxicVQReWKBJ6da6n2.tar.bz2  validator-keypair.json  vote-account-keypair.json
solana-devnet-contract/test-ledger/accounts/: 0.4  157.16  1859.5  1885.6  1901.7  1905.8  2001.9  2026.10  2101.11  2110.14  2123.12  2201.13  2228.15  2301.17  2325.18  2363.21  2382.20  2401.19  2430.22  2501.23  2532.24  2601.25  2611.26  2701.27  2716.28  2801.29  2808.30  2901.31  2924.32  3001.33  3009.34  3101.35  3107.36  3201.37  3218.38  3249.40  3301.39  3328.41  3401.42  3429.43  (+57 more)
solana-devnet-contract/test-ledger/rocksdb/: 000700.sst  000703.sst  000706.sst  000718.sst  IDENTITY  (+13 more)
solana-devnet-contract/tests/: solana-devnet-contract.ts
test-frontend/: package-lock.json  package.json
test-frontend/constants/: chaininfo.ts  contractsInfo.ts
test-frontend/multichain/: context.tsx  index.ts
test-frontend/pages/: _app.tsx  index.tsx
(+20 files in other folders)
